--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
                     <li><button class="button">Hire Me</button></li>
                 </ul>
             </nav>
+            <section id="banner">
+                <div class="banner-content">
+                    <h2>Hi, I'm</h2>
+                    <h1>Rakibul Islam</h1>
+                    <p>I'm Rakibul Islam, a dedicated web developer with a passion for creating dynamic and responsive websites.</p>
+                    <button class="button">Download CV</button>
+                    <button class="button">Contact</button>
+                </div>
+                <div class="banner-image">
+                    <img src="images/rakib-removebg-preview(1).png" alt="Profile Picture">
+                </div>
+            </section>
         </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
