--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="banner-content">
                     <h2>Hi, I'm</h2>
                     <h1>Rakibul Islam</h1>
-                    <p>I'm Rakibul Islam, a dedicated web developer with a passion for creating dynamic and responsive websites.</p>
+                    <p>I'm Rakibul Islam, a dedicated web developer with a passion for creating dynamic and responsive websites. With expertise in HTML, CSS, JavaScript, and various frameworks, I strive to deliver high-quality web solutions that meet client needs and enhance user experiences.</p>
                     <button class="button">Download CV</button>
                     <button class="button">Contact</button>
                 </div>
@@ -36,9 +36,32 @@
                 </div>
             </section>
         </header>
-        <main>
-
-        </main>
+            <section id="about">
+                <div class="about-container">
+                    <div class="section-heading">
+                        <h2>About Me</h2>
+                        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                    </div>
+                    <div class="about-info">
+                        <div class="info-card">
+                            <p>Name</p>
+                            <h4>Rakibul Islam</h4>
+                        </div>
+                        <div class="info-card">
+                            <p>Email</p>
+                            <h4>rakibulislam611852@gmail.com</h4>
+                        </div>
+                        <div class="info-card">
+                            <p>Date of Birth</p>
+                            <h4>22 Feb 2004</h4>
+                        </div>
+                        <div class="info-card">
+                            <p>From</p>
+                            <h4>Dhaka, Bangladesh</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
         <footer>
 
         </footer>
