skills section add here

--- a/index.html
+++ b/index.html
@@ -62,6 +62,38 @@
                     </div>
                 </div>
             </section>
+ 
+                    <section id="skills">
+                        <div class="skills-container">
+                            <div class="section-heading">
+                                 <h2>My Skills</h2>
+                                 <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>          
+                            </div>
+
+                            <div class="skills-box">
+                                <div class="skill-card">
+                                    <img src="images/icons/js.png" alt="">
+                                    <h3>JavaScript</h3>
+                                    <p>Proficient in JavaScript, with a strong understanding of ES6+ features, asynchronous programming, and modern frameworks.</p>
+                                </div>
+                                <div class="skill-card">
+                                    <img src="images/icons/react.png" alt="">
+                                    <h3>React</h3>
+                                    <p>Proficient in React, with a strong understanding of component-based architecture, state management, and modern hooks.</p>
+                                </div>
+                                <div class="skill-card">
+                                    <img src="images/icons/nodejs.png" alt="">
+                                    <h3>Node.js</h3>
+                                    <p>Proficient in Node.js, with a strong understanding of server-side JavaScript, Express.js, and asynchronous programming.</p>
+                                </div>
+                                <div class="skill-card">
+                                    <img src="images/icons/mongo.png" alt="">
+                                    <h3>MongoDB</h3>
+                                    <p>Proficient in MongoDB, with a strong understanding of NoSQL databases, document modeling, and querying techniques.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
         <footer>
 
         </footer>
